(env
    (debug (ocamlopt_flags (:standard -g -Oclassic)))
    (_ (ocamlopt_flags (:standard -O3 -rounds 6))))

(menhir (modules parser))

(ocamllex lexer)

(library
    (name burst)
    (public_name burst)
    (libraries core-and-more)
    (preprocess (pps ppx_bin_prot ppx_hash ppx_deriving.std ppx_let ppx_optcomp ppx_compare ppx_sexp_conv
    ;export OCAML_LANDMARKS=auto,format=json,output=lm.json
    )))
